# unSIR0

./: .gitignore  001.dump  025M.dump  Makefile.am  Makefile.in  configure  configure.ac  dumpAnim.cpp  dumpSprite.cpp  makeThumb.cpp  playAnim.cpp  readSprite.cpp  spritefile.cpp  spritefile.hpp  spriteio.cpp  spriteio.hpp
