bin_PROGRAMS = readSprite dumpSprite playAnim makeThumb
readSprite_SOURCES = readSprite.cpp spriteio.cpp
dumpSprite_SOURCES = dumpSprite.cpp spritefile.cpp spriteio.cpp
playAnim_SOURCES = playAnim.cpp spritefile.cpp spriteio.cpp
makeThumb_SOURCES = makeThumb.cpp spritefile.cpp spriteio.cpp
noinst_HEADERS = spritefile.hpp spriteio.hpp
